# webserv

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  AutoindexHandler.cpp  AutoindexHandler.hpp  BlockNode.cpp  BlockNode.hpp  Body.cpp  Body.hpp  CMakeLists.txt  CgiHandler.cpp  CgiHandler.hpp  Config.cpp  Config.hpp  ConfigTranslator.cpp  ConfigTranslator.hpp  ConfigValidator.cpp  ConfigValidator.hpp  Config_Reader.cpp  Config_Reader.hpp  Connection.cpp  Connection.hpp  DeleteHandler.cpp  DeleteHandler.hpp  DirectiveNode.cpp  DirectiveNode.hpp  EchoHandler.cpp  EchoHandler.hpp  FileHandler.cpp  FileHandler.hpp  HandlerRegistry.cpp  HandlerRegistry.hpp  HeadHandler.cpp  HeadHandler.hpp  Header.cpp  Header.hpp  HttpMethod.cpp  HttpMethod.hpp  (+57 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-gtest/: action.yml
.github/workflows/: build-and-test.yml  build-check.yml  check-build.yml  check-lint.yml  check-makefile.yml  check-tests.yml  compilation-check.yml  coverage.yml  cpp-linter.yml  format-on-demand.yml  lint-check.yml
_codeql_build_dir/: Makefile
cmake/: Makefile.in  generate_makefile.cmake
conf/: autoindex.conf  cgi.conf  complete.conf  default.conf  eval.conf  mime.types  test-features.conf  test.conf  updated.conf
cpp test/: epoll.cpp  epoll.hpp  test_main.cpp
docs/: CONFIGURATION.md  COOKIE_DEMO.md  config-schema.json
off_test/: test.conf
scripts/: show_coverage.sh
src/: CMakeLists.txt
src/config/: BlockNode.cpp  BlockNode.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Config_test.cpp  Location.cpp  Location.hpp  Location_test.cpp
src/core/: CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionTimeout_test.cpp  Connection_test.cpp  MaxRequestBody_test.cpp  Server.cpp  Server.hpp  ServerManager.cpp  ServerManager.hpp  Server_test.cpp  main.cpp
src/handlers/: AutoindexHandler.cpp  AutoindexHandler.hpp  AutoindexHandler_test.cpp  CMakeLists.txt  CgiHandler.cpp  CgiHandler.hpp  EchoHandler.cpp  EchoHandler.hpp  ErrorFileHandler.cpp  ErrorFileHandler.hpp  FileHandler.cpp  FileHandler.hpp  FileHandler_test.cpp  IHandler.cpp  IHandler.hpp  IHandler_test.cpp  RedirectHandler.cpp  RedirectHandler.hpp
src/http/: Body.hpp  CMakeLists.txt  Cookie_test.cpp  Header.cpp  Header_test.cpp  HttpMethod.hpp  HttpMethod_test.cpp  HttpStatus.cpp  HttpStatus.hpp  HttpStatus_test.cpp  Message.cpp  Request.cpp  Request.hpp  RequestLine.cpp  RequestLine.hpp  RequestLine_test.cpp  Response.cpp  Response.hpp  StatusLine.cpp  StatusLine_test.cpp  Uri.cpp  Uri.hpp  Uri_test.cpp  Url.cpp  Url.hpp  Url_test.cpp
src/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp  constants.hpp  file_utils.cpp  file_utils.hpp  file_utils_test.cpp  utils.cpp  utils.hpp  utils_test.cpp
tests/: CMakeLists.txt  config_test.cpp  file_utils_test.cpp  message_test.cpp  request_test.cpp  response_test.cpp
tests/e2e/: README.md  conftest.py  pyproject.toml  run_e2e_tests.sh  test_basic_http.py  test_cgi.py  test_cgi_execution.py  test_cookies.py  test_e2e.py  test_edge_cases.py  test_file_operations.py  test_http_basic.py  test_timeout.py  test_timeout_cgi.py  webserv_test_base.py
tests/e2e/conf/: test.conf
tests/e2e/www/: 404.html  index.html
tests/e2e/www/cgi-bin/: basic.sh  echo.cgi  hang.cgi  post_test.sh  simple.sh
www/: 200.html  201.html  204.html  206.html  301.html  302.html  303.html  307.html  308.html  400.html  401.html  402.html  403.html  404.html  405.html  406.html  408.html  409.html  410.html  413.html  414.html  415.html  416.html  417.html  418.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  507.html  509.html  510.html  511.html  (+5 more)
www/autoindex/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
www/cgi-bin/: basic.sh  dashboard.php  debug.sh  echo_cookie.sh  infinite.sh  login.php  logout.php  path_info_test.py  php-wrapper.sh  post_test.sh  session_api.php  session_demo.php  setcookie.sh  simple.sh  test.py  test.sh
www/css/: style.css
www/mime-tests/: index.html  sample.csv  sample.js  sample.txt
www/test-files/: cookie_demo.html  cookie_test.html  index.html  sample.css  sample.html  sample.json  sample.xml
www/tests/: cgi.html  common.js  index.html  methods.html  redirect.html  upload.html
www/tests/autoindex/: index.html
www/tests/cgi/: index.html
www/tests/custom-error/: index.html
www/tests/limits/: index.html
www/tests/redirect/: index.html
www/tests/static/: index.html
www/tests/timeout/: index.html
www/tests/upload/: index.html
www/uploads/: binary-upload.txt  test-upload.txt  test.txt  test1.txt  test2.txt
